Remove redundant commands and clean up code structure